--- a/travelmap.ipynb
+++ b/travelmap.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Map has been saved to AutoCentered_Map_Route.html\n",
+      "Map has been saved to map_route.html\n",
       "Map has been saved to highlighted_countries_map.html\n"
      ]
     }
@@ -18,14 +18,35 @@
     "import folium\n",
     "import geopandas as gpd\n",
     "import pycountry\n",
+    "from folium import IFrame\n",
     "\n",
-    "def create_auto_centered_map(locations, output_file=\"AutoCentered_Map_Route.html\"):\n",
+    "def create_auto_centered_map(locations, output_file=\"map_route.html\"):\n",
     "    # Initialize map without specifying center and zoom\n",
     "    auto_center_map = folium.Map()\n",
     "\n",
     "    # Add all locations to the map\n",
     "    for location, coordinates in locations.items():\n",
-    "        folium.Marker(location=coordinates, popup=location).add_to(auto_center_map)\n",
+    "        # Split location name and description\n",
+    "        title, description = location.split(\": \", 1)\n",
+    "        \n",
+    "        # Generate link to corresponding .md file\n",
+    "        city_name = title.split(\",\")[0].strip().lower().replace(\" \", \"-\")\n",
+    "        link = f\"<a href='{city_name}/' target='_blank'>Read more</a>\"   \n",
+    "        # Create HTML content for popup with short description and link\n",
+    "        html_content = f\"\"\"\n",
+    "        <div style=\"font-family: Arial, sans-serif; font-size: 12px;\">\n",
+    "            <b>{title}</b><br>\n",
+    "            {description.split('.')[0]}.<br><br>\n",
+    "            {link}\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "        iframe = IFrame(html_content, width=250, height=150)  # Adjust popup size\n",
+    "\n",
+    "        # Add marker with formatted popup\n",
+    "        folium.Marker(\n",
+    "            location=coordinates,\n",
+    "            popup=folium.Popup(iframe),\n",
+    "        ).add_to(auto_center_map)\n",
     "\n",
     "    # Add edges from i to i+1\n",
     "    locations_list = list(locations.values())\n",
@@ -121,10 +142,29 @@
     "# }\n",
     "\n",
     "all_locations = {\n",
-    "    \"1. Izmir/Alacati, Turkey\": [38.2816, 26.3744],\n",
-    "    \"2. Cappadocia, Turkey\": [38.6431, 34.8278],\n",
-    "    \"3. Safranbolu, Turkey\": [41.2500, 32.6833],\n",
-    "    \"4. Istanbul, Turkey\": [41.0082, 28.9784]\n",
+    "    \"1. Istanbul, Turkey: A city that straddles Europe and Asia, known for its rich history and cultural landmarks like Hagia Sophia, a masterpiece blending Byzantine and Ottoman architecture; the Blue Mosque with its iconic minarets and blue tiles; Topkapi Palace, home to Ottoman sultans for centuries; the bustling Grand Bazaar, one of the world’s oldest markets; and the Bosphorus Cruise, offering scenic views of palaces, bridges, and waterfront mansions.\": [41.0082, 28.9784],\n",
+    "    \n",
+    "    \"2. Cappadocia, Turkey: Famous for its surreal landscapes filled with unique fairy chimneys, cave dwellings, and rock formations. It is a top destination for hot air balloon rides at sunrise, offering unforgettable panoramic views of valleys such as Göreme and Devrent. The region also boasts ancient underground cities like Derinkuyu and Kaymaklı, used as hiding places during Byzantine times.\": [38.6431, 34.8309],\n",
+    "    \n",
+    "    \"3. Pamukkale, Turkey: Known as the 'Cotton Castle' for its white travertine terraces formed by thermal waters cascading down the hills. Visitors can soak in the warm, mineral-rich pools with stunning views. The ancient city of Hierapolis, perched atop Pamukkale, features well-preserved Roman ruins, including a vast necropolis, a theater, and the famous Cleopatra’s Pool, said to have healing properties.\": [37.9244, 29.1187],\n",
+    "    \n",
+    "    \"4. Ephesus, Turkey: One of the best-preserved ancient cities in the Mediterranean, showcasing Roman and Greek architecture. Highlights include the Library of Celsus, a grand ancient library with intricate carvings; the massive Great Theater capable of seating 25,000 spectators; and the ruins of the Temple of Artemis, once one of the Seven Wonders of the Ancient World.\": [37.9392, 27.3414],\n",
+    "    \n",
+    "    \"5. Antalya, Turkey: A popular resort city on the Turkish Riviera, known for its stunning beaches like Konyaaltı and Lara, turquoise waters, and luxury resorts. The charming Old Town (Kaleiçi) features narrow cobblestone streets, Ottoman mansions, and historic landmarks. Nearby attractions include the Düden Waterfalls and ancient ruins like Perge and Aspendos with its impressive Roman theater.\": [36.8969, 30.7133],\n",
+    "    \n",
+    "    \"6. Bodrum, Turkey: A coastal town renowned for its beaches, nightlife, and historical significance. It is home to the Bodrum Castle, built by the Knights Hospitaller and now housing the Museum of Underwater Archaeology. The town also contains the remains of the Mausoleum at Halicarnassus, one of the Seven Wonders of the Ancient World. Sailing along the Aegean coast is a favorite activity here.\": [37.0344, 27.4305],\n",
+    "    \n",
+    "    \"7. Troy, Turkey: The legendary city of the Trojan War described in Homer’s Iliad. Archaeological excavations reveal layers of ancient cities built on top of one another, dating back to the Bronze Age. Visitors can see the symbolic replica of the Trojan Horse and ruins of city walls, temples, and houses, offering a glimpse into one of history’s most famous mythological battles.\": [39.9578, 26.2389],\n",
+    "    \n",
+    "    \"8. Mount Ararat, Turkey: The highest peak in Turkey at 5,137 meters, believed to be the resting place of Noah’s Ark according to biblical tradition. It is a prominent destination for mountaineering and trekking enthusiasts, offering challenging ascents and breathtaking views of the surrounding landscapes near the Turkish-Iranian border.\": [39.7022, 44.2983],\n",
+    "    \n",
+    "    \"9. Ankara, Turkey: The capital city of Turkey, blending modernity with history. Key attractions include Anıtkabir, the monumental mausoleum of Mustafa Kemal Atatürk, the founder of modern Turkey. The Museum of Anatolian Civilizations houses artifacts from ancient civilizations, while the old citadel and Roman ruins showcase the city's deep historical roots.\": [39.9334, 32.8597],\n",
+    "    \n",
+    "    \"10. Trabzon, Turkey: Located on the Black Sea coast, Trabzon is known for its lush green landscapes and cultural landmarks. The cliffside Sumela Monastery, built into the rocks of the Pontic Mountains, offers stunning views and historical significance. Trabzon is also famous for its tea plantations, local cuisine, and historic sites like the Hagia Sophia of Trabzon.\": [41.0015, 39.7178],\n",
+    "    \n",
+    "    \"11. Gallipoli Peninsula, Turkey: A site of immense historical importance, particularly for the Gallipoli Campaign of World War I. It is home to numerous memorials, cemeteries, and battlefields commemorating the soldiers who fought and perished during the campaign. Visitors can explore landmarks like Anzac Cove, Lone Pine Cemetery, and Chunuk Bair.\": [40.3675, 26.4503],\n",
+    "    \n",
+    "    \"12. Fethiye, Turkey: A stunning coastal town known for its turquoise waters, beautiful beaches, and vibrant harbor. It is home to the famous Ölüdeniz Blue Lagoon, perfect for swimming and paragliding, offering dramatic views of the coastline. Nearby attractions include the ghost town of Kayaköy, the Lycian Way hiking trail, and the ancient ruins of Telmessos.\": [36.6210, 29.1163]\n",
     "}\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -137,6 +177,20 @@
     "    # Call the function to highlight countries and save to HTML\n",
     "    highlight_countries_on_map(countries_to_highlight, shapefile_path=\"/Users/songye03/Desktop/me/ne_110m_admin_0_countries/ne_110m_admin_0_countries.shp\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
