georgia looking good :)

--- a/_posts/2024-01-13-istanbul.md
+++ b/_posts/2024-01-13-istanbul.md
@@ -6,4 +6,5 @@ categories: travel
 permalink: /istanbul/
 ---
 
-This is about Istanbul. A beautiful city that straddles Europe and Asia, with iconic landmarks like Hagia Sophia and the Blue Mosque.
+ISIC Card ordered for 20 USD online, good for at least two of the palaces. It is worth using it whenever possible.
+Troy and Gallipoli.
