google maps features

--- a/_posts/2024-01-13-istanbul.md
+++ b/_posts/2024-01-13-istanbul.md
@@ -6,5 +6,7 @@ categories: travel
 permalink: /istanbul/
 ---
 
+<iframe src="https://www.google.com/maps/d/embed?mid=1WQSXntKpjlg-VDX1jJKHWpCDNLQx3c0&ehbc=2E312F" width="640" height="480"></iframe>
+
 ISIC Card ordered for 20 USD online, good for at least two of the palaces. It is worth using it whenever possible.
 Troy and Gallipoli.
