--- a/_posts/2024-01-13-istanbul.md
+++ b/_posts/2024-01-13-istanbul.md
@@ -7,6 +7,32 @@ permalink: /istanbul/
 ---
 Travel insights that may be useful
 - ISIC Card ordered for 20 USD online, good for at least two of the palaces. It is worth using it whenever possible.
+- Historical Drama: Magnificent Century
+
+| Dish         | Pronunciation | Description                                                                 |
+|--------------|---------------|-----------------------------------------------------------------------------|
+| Baklava      | bahk-lah-vah  | A rich, sweet pastry made of layers of filo filled with chopped nuts and sweetened with syrup or honey. |
+| Döner        | doh-nair      | A type of kebab, made of meat cooked on a vertical rotisserie, typically served in a sandwich or wrap. |
+| Kebap        | keh-bahp      | Grilled or skewered meat, often served with vegetables and rice or bread. |
+| Kokoreç      | koh-koh-rech  | A dish made from lamb intestines, seasoned and grilled, often served in a sandwich. |
+| Ayran        | eye-rahn      | A cold, savory yogurt-based beverage mixed with salt. |
+| Lahmacun     | lah-mah-jun   | A thin, crispy flatbread topped with minced meat, vegetables, and herbs, often referred to as Turkish pizza. |
+| Künefe       | koo-neh-feh   | A dessert made with thin noodle-like pastry soaked in sweet syrup and layered with cheese. |
+| Midye Dolma  | mid-yeh dol-mah | Stuffed mussels filled with spiced rice, pine nuts, and currants. |
+| Lokum        | loh-koom      | Also known as Turkish delight, a confection made from starch and sugar, often flavored with rosewater or lemon. |
+| Çiğ Köfte    | chee kof-teh  | A raw meatball dish made with bulgur, finely ground meat, and a variety of spices. |
+| Pide         | pee-deh       | A type of flatbread, often topped with cheese, meat, or vegetables, similar to a pizza. |
+| Mantı        | mahn-tee      | Turkish dumplings filled with spiced meat, typically served with yogurt and garlic sauce. |
+| İmam Bayıldı | ee-mahm bah-yil-dee | A stuffed eggplant dish, filled with onions, garlic, and tomatoes, and cooked in olive oil. |
+| Börek        | boh-rek       | A savory pastry made of thin layers of dough, filled with cheese, spinach, or meat. |
+| Menemen      | meh-neh-men   | A traditional Turkish breakfast dish made with scrambled eggs, tomatoes, green peppers, and spices. |
+| İskender     | is-ken-der    | A dish made of thinly sliced döner meat, served over pieces of pita bread, topped with tomato sauce and yogurt. |
+| Kumpir       | koom-peer     | A baked potato stuffed with a variety of toppings such as cheese, sausage, and vegetables. |
+| Tavuk Göğsü  | tah-vook goh-soo | A milk pudding made with shredded chicken breast, flavored with cinnamon. |
+| Sütlaç       | soot-lahch    | A traditional Turkish rice pudding, often flavored with vanilla and cinnamon. |
+| Börek        | boh-rek       | A savory pastry made of thin layers of dough, filled with cheese, spinach, or meat. |
+| Su Böreği   | soo boh-reh-ee | A type of börek made with layers of dough and cheese, often boiled before baking. |
+| İskender     | is-ken-der    | A dish made of thinly sliced döner meat, served over pieces of pita bread, topped with tomato sauce and yogurt. |
 
 
 <iframe src="https://www.google.com/maps/d/embed?mid=1WQSXntKpjlg-VDX1jJKHWpCDNLQx3c0&ehbc=2E312F" width="640" height="480"></iframe>
