wrote about istanbul athens vienna

--- a/_posts/2025-01-13-istanbul.md
+++ b/_posts/2025-01-13-istanbul.md
@@ -5,9 +5,19 @@ date: 2024-01-13
 categories: travel
 permalink: /istanbul/
 ---
-Travel insights that may be useful
-- ISIC Card ordered for 20 USD online, good for at least two of the palaces. It is worth using it whenever possible.
-- Historical Drama: Magnificent Century
+
+## General Remarks
+
+If you are planning to visit multiple palaces in Istanbul, consider ordering an ISIC Card online for 20 USD. This card provides discounts and is valid for entry to at least two of the palaces. It is a cost-effective option and worth using whenever possible. It also proved useful in other cities that I visited on this trip, saving me at least 100 USD.
+
+<div style="text-align: center;">
+    <iframe src="https://www.google.com/maps/d/embed?mid=1WQSXntKpjlg-VDX1jJKHWpCDNLQx3c0&ehbc=2E312F" width="640" height="480"></iframe>
+</div>
+
+
+While Istanbul is generally a safe city, be aware of pickpockets. Unfortunately, I experienced this firsthand when somebody stole my watch off my wrist in a bar. Those guys are good.
+
+## Food
 
 | Dish         | Pronunciation | Description                                                                 |
 |--------------|---------------|-----------------------------------------------------------------------------|
@@ -34,6 +44,28 @@ Travel insights that may be useful
 | Su Böreği   | soo boh-reh-ee | A type of börek made with layers of dough and cheese, often boiled before baking. |
 | İskender     | is-ken-der    | A dish made of thinly sliced döner meat, served over pieces of pita bread, topped with tomato sauce and yogurt. |
 
+## Happenings
 
-<iframe src="https://www.google.com/maps/d/embed?mid=1WQSXntKpjlg-VDX1jJKHWpCDNLQx3c0&ehbc=2E312F" width="640" height="480"></iframe>
+I ate at a really great local dining hall where they gave me a free piece of bread because I didn't have 3L cash.
+
+I met a bunch of people who came to Turkey for hair and teeth surgery. Take care of your gums!
+
+I chatted with a Russian architect living in Moscow. He had a lot to say about the Istanbul subway system.
+
+I visited Topkapi Palace and Dolmabahce Palace. I skipped the Hagia Sophia and the Galata Tower because they seemed like money grabs. In fact, the palaces at full price would not have been worth it.
+
+The WiFi failed during my Duke interview, so I had to scrap the Central Asia trip. I was furious.
+
+I went on a bar crawl, and somebody stole my watch off my wrist. This nearly triggered stoploss but Sid convinced me otherwise.
+
+I took a ferry to the Princes' Islands.
+
+I met an engineering student named Kaira on a ferry to the Asian side. We met up with his friend, and they showed me a popular chain eatery where we ate İskender. Afterwards, they treated me to tea. We chatted for three hours, discussing various topics including Islam and Trumpcoin.
+
+I didn't have enough cash to buy çiğ köfte after I already ordered it. The vendor accepted what I had (10% of the price) and gave it to me anyway.
+
+While checking into my hotel, I had to wait outside because the check-in was delayed. A nice Kurdish man running the hotel next door let me sit in the lobby and use the WiFi. He claimed not to own the hotel but kept talking like he did. He was previously an English teacher and spoke five languages (English, Spanish, Kurdish, Russian, Turkish).
+
+
+
 
