--- a/_posts/2025-01-20-athens.md
+++ b/_posts/2025-01-20-athens.md
@@ -5,3 +5,38 @@ date: 2025-01-20
 categories: travel
 permalink: /athens/
 ---
+## General Remarks
+| Dish           | Pronunciation | Description                                      |
+|----------------|---------------|--------------------------------------------------|
+| Moussaka       | moo-sah-kah   | A layered dish with eggplant, minced meat, and béchamel sauce. |
+| Souvlaki       | soo-vlah-kee  | Skewered and grilled meat, often served with pita and vegetables. |
+| Tzatziki       | tsah-tsee-kee | A yogurt-based dip with cucumber, garlic, and herbs.             |
+| Spanakopita    | spa-nah-ko-pee-tah | A savory pie filled with spinach and feta cheese.            |
+| Baklava        | bahk-lah-vah  | A sweet pastry made of layers of filo filled with chopped nuts and honey. |
+| Dolmades       | dol-mah-des   | Grape leaves stuffed with rice, pine nuts, and herbs.            |
+| Gyro           | yee-roh       | Meat cooked on a vertical rotisserie, typically served in a pita with tomatoes, onions, and tzatziki. |
+| Feta Cheese    | feh-tah       | A brined curd white cheese made from sheep's milk or a mixture of sheep and goat's milk. |
+| Loukoumades    | loo-koo-mah-des | Greek doughnuts soaked in honey syrup and sprinkled with cinnamon. |
+| Horiatiki      | hoh-ree-ah-tee-kee | Traditional Greek salad with tomatoes, cucumbers, onions, olives, and feta cheese. |
+
+
+## Happenings
+I got on the wrong bus from the airport and ended up in Piraeus. I swam in the Mediterranean, ate some seafood pasta, and fed the birds.
+
+I pretty much spent most of my time walking around the city. I only "visited" the Parthenon, as most of the other ruins can be observed from outside the exhibition.
+
+I took a day trip to Meteora. I would have been short on time except I hitched a ride with an Austrian couple traveling in a camper with their two daughters, aged 9 and 7. The parents explained to me that they sold all their belongings and had been traveling in the camper for about four months. They didn't believe in standard education and had defrauded Austrian homeschooling requirements. The father was pro-Trump and pro-cryptocurrency, and their 7-year-old could not read her native language. What a disaster. Meteora was absolutely spectacular.
+
+I stayed in Kato Patissia, a rough working-class neighborhood, but I wouldn't have had it any other way.
+
+I enjoyed jump roping in the park. It's really cool, and I want to learn how to boxer skip.
+
+There were so many smokers.
+
+I got into Berkeley and UCLA.
+
+While waiting for laundry, I chatted with some kids. They were super racist toward Pakistanis, and there was a 10-year-old vaping.
+
+Greeks don't pay for public transport. I believe this has to do with distrust in the government after the Greek bond disaster.
+
+Greek food is really good.
