--- a/_posts/2025-01-27-vienna.md
+++ b/_posts/2025-01-27-vienna.md
@@ -5,3 +5,27 @@ date: 2025-01-27
 categories: travel
 permalink: /vienna/
 ---
+## General Remarks
+
+| Dish           | Pronunciation | Description                                      |
+|----------------|---------------|--------------------------------------------------|
+| Wiener Schnitzel | vee-ner shnit-sel | A breaded and fried veal cutlet, often served with a slice of lemon. |
+| Apfelstrudel   | ap-fel-stroo-del | A traditional Viennese pastry filled with apples, sugar, cinnamon, raisins, and breadcrumbs. |
+| Sachertorte    | sah-ker-tor-te  | A dense chocolate cake with a layer of apricot jam and a chocolate glaze. |
+| Tafelspitz     | tah-fel-shpits  | Boiled beef served with horseradish, apple sauce, and chive sauce. |
+| Kaiserschmarrn | kai-zer-shmarn  | A fluffy, shredded pancake served with powdered sugar and fruit compote. |
+
+## Happenings
+I traveled from the airport straight to downtown and ended up waiting for three hours for standing tickets to an opera performance of "The Magic Flute." I almost missed out at the very end, but two Spanish girls stood up for me.
+
+I met a Japanese lady who was obsessed with Disneyland. She insisted that I accompany her to the concert house, where she bought a second ticket and sold me her first (cheaper, standing) ticket. This was sort of without my consent, but it was cool. We waited together.
+ 
+I also met some Mexicans from aguascalientes. The man was a catholic priest and a family friend of the mother and son. We waited together.
+
+I met a very pretty girl named Sarah studying opera in Taiwan. She stood behind me in line, but I was too nervous to speak to her. After we got our tickets, I ran into her at the nearby Starbucks while waiting for the opera to start. I took it as a sign that we should chat.
+
+The Sisi Museum was phenomenal. Empress Elisabeth of Austria lived a very sad life. She was beautiful, born in 1837, and married at the age of 15 to a very powerful man, Franz Joseph, whose mother controlled her life. She was not close to her children and traveled to escape demands and take control of her life. She was obsessed with her beauty and was assassinated in her early 60s. I very much resonated with her, a woman who lived nearly 200 years ago, but the themes of her life still carry on.
+
+I saw two concerts at Vienna Musikverein.
+
+I chatted with Herman, a native of Taiwan studying dentistry in Madrid. He bought me a coffee cocktail. He was not the best-looking man but exhibited a charm with women that left me staggered.
