--- a/_posts/2025-01-13-istanbul.md
+++ b/_posts/2025-01-13-istanbul.md
@@ -25,7 +25,6 @@ While Istanbul is generally a safe city, be aware of pickpockets. Unfortunately,
 | Döner        | doh-nair      | A type of kebab, made of meat cooked on a vertical rotisserie, typically served in a sandwich or wrap. |
 | Kebap        | keh-bahp      | Grilled or skewered meat, often served with vegetables and rice or bread. |
 | Kokoreç      | koh-koh-rech  | A dish made from lamb intestines, seasoned and grilled, often served in a sandwich. |
-| Ayran        | eye-rahn      | A cold, savory yogurt-based beverage mixed with salt. |
 | Lahmacun     | lah-mah-jun   | A thin, crispy flatbread topped with minced meat, vegetables, and herbs, often referred to as Turkish pizza. |
 | Künefe       | koo-neh-feh   | A dessert made with thin noodle-like pastry soaked in sweet syrup and layered with cheese. |
 | Midye Dolma  | mid-yeh dol-mah | Stuffed mussels filled with spiced rice, pine nuts, and currants. |
@@ -35,16 +34,12 @@ While Istanbul is generally a safe city, be aware of pickpockets. Unfortunately,
 | Mantı        | mahn-tee      | Turkish dumplings filled with spiced meat, typically served with yogurt and garlic sauce. |
 | İmam Bayıldı | ee-mahm bah-yil-dee | A stuffed eggplant dish, filled with onions, garlic, and tomatoes, and cooked in olive oil. |
 | Börek        | boh-rek       | A savory pastry made of thin layers of dough, filled with cheese, spinach, or meat. |
-| Menemen      | meh-neh-men   | A traditional Turkish breakfast dish made with scrambled eggs, tomatoes, green peppers, and spices. |
 | İskender     | is-ken-der    | A dish made of thinly sliced döner meat, served over pieces of pita bread, topped with tomato sauce and yogurt. |
-| Kumpir       | koom-peer     | A baked potato stuffed with a variety of toppings such as cheese, sausage, and vegetables. |
-| Tavuk Göğsü  | tah-vook goh-soo | A milk pudding made with shredded chicken breast, flavored with cinnamon. |
-| Sütlaç       | soot-lahch    | A traditional Turkish rice pudding, often flavored with vanilla and cinnamon. |
 | Börek        | boh-rek       | A savory pastry made of thin layers of dough, filled with cheese, spinach, or meat. |
 | Su Böreği   | soo boh-reh-ee | A type of börek made with layers of dough and cheese, often boiled before baking. |
-| İskender     | is-ken-der    | A dish made of thinly sliced döner meat, served over pieces of pita bread, topped with tomato sauce and yogurt. |
 
 ## Happenings
+On the plane, I was sitting in front of these three Muslim brothers from Pakistan. We were getting along quite well. They were getting hammered off some Jack Daniels that one of them brought on their carryon, and they started pouring me shots. The flight attendants were very kind and didn't say anything. They were going to Turkey for cosmetic surgery. One of them had no teeth. It was quite harrowing. When we were deboarding, one of them started aggressively making advances toward the flight attendant and when she rejected him because he was a drunk bastard with no teeth, he called her a whore and threated to report her. I gave her the business card he had handed me earlier so that she could file a report on him with Icelandair. 
 
 I ate at a really great local dining hall where they gave me a free piece of bread because I didn't have 3L cash.
 
@@ -58,7 +53,7 @@ The WiFi failed during my Duke interview, so I had to scrap the Central Asia tri
 
 I went on a bar crawl, and somebody stole my watch off my wrist. This nearly triggered stoploss but Sid convinced me otherwise.
 
-I took a ferry to the Princes' Islands.
+I took a ferry to the Princes' Islands. The ferry ride and the islands were very beautiful.
 
 I met an engineering student named Kaira on a ferry to the Asian side. We met up with his friend, and they showed me a popular chain eatery where we ate İskender. Afterwards, they treated me to tea. We chatted for three hours, discussing various topics including Islam and Trumpcoin.
 
