--- a/travelmap.ipynb
+++ b/travelmap.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_locations = {\n",
-    "    \"1. Istanbul, Turkey: A city that straddles Europe and Asia across the Bosphorus Strait.\": [41.0082, 28.9784],\n",
-    "    \"2. Athens, Greece: The capital city known for its ancient landmarks.\": [37.9838, 23.7275],\n",
-    "    \"3. Vienna, Austria: Austria's capital, known for its artistic and intellectual legacy.\": [48.2082, 16.3738],\n",
-    "    \"4. Tirana, Albania: The capital city of Albania, known for its colorful Ottoman, Fascist and Soviet-era architecture.\": [41.3275, 19.8187],\n",
-    "    \"5. Rome, Italy: The capital city, known for its nearly 3,000 years of globally influential art, architecture, and culture.\": [41.9028, 12.4964],\n",
-    "    \"6. Paris, France: The capital city, known for its cafe culture and landmarks like the Eiffel Tower.\": [48.8566, 2.3522],\n",
-    "    \"7. Stockholm, Sweden: The capital city, encompassing 14 islands and more than 50 bridges.\": [59.3293, 18.0686],\n",
-    "    \"8. Reykjavik, Iceland: The capital city, known for its modernist architecture and vibrant cultural scene.\": [64.1265, -21.8174],\n",
+    "    \"1. Istanbul, Turkey: Could've spent a year here.\": [41.0082, 28.9784],\n",
+    "    \"2. Athens, Greece: World leaders 2000 years ago, not so impressive today.\": [37.9838, 23.7275],\n",
+    "    \"3. Vienna, Austria: Stunning. Opera is a big vibe.\": [48.2082, 16.3738],\n",
+    "    \"4. Tirana, Albania: Enver Hoxha screwed these people bad.\": [41.3275, 19.8187],\n",
+    "    \"5. Rome, Italy: Oh my god it's amazing.\": [41.9028, 12.4964],\n",
+    "    \"6. Paris, France: Depressing in the winter, but I saw the Eiffel Tower hooray!\": [48.8566, 2.3522],\n",
+    "    \"7. Stockholm, Sweden: Largest city in Scandanavia, very chill and full of beauty.\": [59.3293, 18.0686],\n",
+    "    \"8. Reykjavik, Iceland: The capital city. Rent a car and do better.\": [64.1265, -21.8174],\n",
     "}\n",
     "\n",
     "countries_to_highlight = [\"China\", \"Mexico\", \"United States\", \"Canada\", \"Guatemala\", \"Honduras\", \"Spain\", \"United Kingdom\", \"Austria\", \"Italy\", \"France\", \"Sweden\", \"Iceland\", \"Greece\", \"Albania\", \"Türkiye\"]\n"
